# spiral-wht

./: .gitignore  COPYRIGHT  INSTALL  Makefile.in  README  acinclude.m4  aclocal.m4  besttrees.default  besttrees.p2  besttrees.para  besttrees.sparc  config.status  configure  configure.ac  configure.in  makelib  measure.c  p_transpose.c  p_transpose_stride.c  parallel.h.in  pclprof.c  retime.prl.in  simplop.prl.in  spiral_wht.c  spiral_wht.h  test.c  transpose.c  transpose.h.in  transpose_stride.c  verify.c  wht_dp_ddl_il.prl.in  wht_dp_para.prl.in  wht_dp_sdl_il.prl.in  wht_trees.c
codegen/: README  whtgeni.c  whtgenit.c  whtgenr.c  whtgenrt.c
ga/: Makefile  Makefile.in  README  best_ave.m  cross.c  cross.h  fitness.c  fitness.h  ga  ga.c  ga.h  hash.c  hash.h  indiv.c  indiv.h  main.c  mutate.c  mutate.h  options.h  plot_best_ave.sh  rand.c  rand.h  randtree.c  randtree.h  tester.c  tester.h  tree.c  tree.h
tools/: bench  gettimes  makeweb  measure.c.bak  measure.c.outofplace
